tests/errors/never_err/never_err.c
#error never_err.never_err:17:4 Type mismatch: 'never' <> 'bool'.
#error never_err.never_err:22:7 Type mismatch: 'never' <> 'char'.
#error never_err.never_err:25:25 Type mismatch: 'never' <> 'string'.
#error never_err.never_err:32:5 Type mismatch: 'never' <> 'int'.
